--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
 h1, p {
   font-family: Lato;
 }
+
+.board{
+  width: 220px;
+  height: 300px;
+  background-color: purple;
+  border-radius:20px;
+  margin:auto;
+  box-shadow: #333 2px 2px 5px;
+  border: black solid 4px;
+}
