--- a/src/style.css
+++ b/src/style.css
@@ -10,4 +10,12 @@ h1, p {
   margin:auto;
   box-shadow: #333 2px 2px 5px;
   border: black solid 4px;
+  padding: 10px;
+}
+
+.screen{
+  width: 100%;
+  height: 50px;
+  background-color:white;
+
 }
