--- a/src/style.css
+++ b/src/style.css
@@ -18,5 +18,22 @@ h1, p {
   width: 100%;
   height: 50px;
   background-color:white;
+  margin-bottom: 10px;
 
+}
+
+.row{
+  width: 100%;
+  height: 35px;
+  background-color:white; 
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.col{
+  width: 24%;
+  height: 35px;
+  background-color:red; 
 }
