--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ h1, p {
 
 .row{
   width: 100%;
-  height: 35px;
+  height: 50px;
   background-color:white; 
   display: flex;
   flex-flow: row;
@@ -34,6 +34,6 @@ h1, p {
 
 .col{
   width: 24%;
-  height: 35px;
+  height: 100%;
   background-color:red; 
 }
