--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,6 @@ h1, p {
 .row{
   width: 100%;
   height: 50px;
-  background-color:white; 
   display: flex;
   flex-flow: row;
   justify-content: space-between;
@@ -33,7 +32,8 @@ h1, p {
 }
 
 .col{
-  width: 24%;
+  width: 23%;
   height: 100%;
-  background-color:red; 
+  background-color:#ccc; 
+  border-radius: 5px;
 }
